--- a/app/views/food_lists/_food_list.html.erb
+++ b/app/views/food_lists/_food_list.html.erb
@@ -1,27 +1,9 @@
-<div id="<%= dom_id food_list %>">
-  <p>
-    <strong>Food name:</strong>
-    <%= food_list.food_name %>
-  </p>
-
-  <p>
-    <strong>Food amount:</strong>
-    <%= food_list.food_amount %>
-  </p>
-
-  <p>
-    <strong>Donate date:</strong>
-    <%= food_list.donate_date %>
-  </p>
-
-  <p>
-    <strong>Collected from:</strong>
-    <%= food_list.collected_from %>
-  </p>
-
-  <p>
-    <strong>Donar name:</strong>
-    <%= food_list.donar_name %>
-  </p>
-
+<div id="<%= dom_id food_list %>" class="mb-3">
+  <div class="card-body">
+    <h5 class="card-title"><%= food_list.food_name %></h5>
+    <p class="card-text"><strong>Food Amount:</strong> <%= food_list.food_amount %></p>
+    <p class="card-text"><strong>Donate Date:</strong> <%= food_list.donate_date %></p>
+    <p class="card-text"><strong>Collected From:</strong> <%= food_list.collected_from %></p>
+    <p class="card-text"><strong>Donor Name:</strong> <%= food_list.donar_name %></p>
+  </div>
 </div>
