--- a/app/views/food_lists/edit.html.erb
+++ b/app/views/food_lists/edit.html.erb
@@ -1,10 +1,14 @@
-<h1>Editing food list</h1>
+<div class="container mt-4">
+  <h1 class="mb-4">Editing Food List</h1>
 
-<%= render "form", food_list: @food_list %>
+  <div class="card">
+    <div class="card-body">
+      <%= render "form", food_list: @food_list %>
+    </div>
+  </div>
 
-<br>
-
-<div>
-  <%= link_to "Show this food list", @food_list %> |
-  <%= link_to "Back to food lists", food_lists_path %>
+  <div class="mt-3">
+    <%= link_to "Show this food list", @food_list, class: "btn btn-primary mr-2" %>
+    <%= link_to "Back to food lists", food_lists_path, class: "btn btn-secondary" %>
+  </div>
 </div>
