--- a/app/views/food_lists/new.html.erb
+++ b/app/views/food_lists/new.html.erb
@@ -1,9 +1,13 @@
-<h1>New food list</h1>
+<div class="container">
+  <h1 class="mt-4">New Food List</h1>
 
-<%= render "form", food_list: @food_list %>
+  <div class="card">
+    <div class="card-body">
+      <%= render "form", food_list: @food_list %>
+    </div>
+  </div>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Back to food lists", food_lists_path %>
+  <%= link_to "Back to food lists", food_lists_path, class: "btn btn-secondary mt-3" %>
 </div>
